--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -405,6 +405,8 @@ h1 {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(../../images/banner.png) center/cover no-repeat fixed;
   overflow: auto;
+  background-size: cover;
+  background-position: center;
 }
 .author .title {
   text-align: center;
@@ -467,6 +469,8 @@ h1 {
 #register {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
     url(../../images/banner.png) center/cover no-repeat fixed;
+  background-size: cover;
+  background-position: center;
   /* background: conic-gradient(#da7139, #e99b26, #ca6928, #da9125e8, #da7139); */
   min-height: 80vh;
   display: flex;
